# tetris-sdl2

./: .gitignore  CMakeLists.txt  README.md
Src/: Main.cpp
Src/Game/: Actor.cpp  Actor.h  Board.cpp  Board.h  Game.cpp  Game.h  Piece.cpp  Piece.h
Test/: Main.cpp
Test/Engine/Core/: Actor.cpp  Actor.h  BlocksComponent.h  Component.cpp  Component.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  MoveComponent.cpp  MoveComponent.h
Test/Engine/Utils/: Random.cpp  Random.h
Test/Game/: Piece.cpp  Piece.h
ue/: README.md  TetrisUE.uproject
ue/Config/: DefaultEngine.ini
ue/Source/TetrisUE/: TetrisUE.Build.cs  TetrisUE.Target.cs  TetrisUEEditor.Target.cs
ue/Source/TetrisUE/Private/: BoardActor.cpp  PieceActor.cpp  TetrisGameModeBase.cpp  TetrisPlayerController.cpp  TetrisTypes.cpp
ue/Source/TetrisUE/Public/: BoardActor.h  PieceActor.h  TetrisGameModeBase.h  TetrisPlayerController.h  TetrisTypes.h
